tests/fixtures/invalid/set_in_none.py
# Cannot use 'in' with Set[int] and None
x: bool = {1, 2, 3} in None
